[package]
name = "yagbe"
version = "0.0.0"
edition = "2021"

[dependencies]
bitflags = "2.3.1"
raw-window-handle = "0.4.2"
sdl2 = { version = "0.35.2", features = ["ttf", "raw-window-handle"] }
tao = "0.20.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_UI_Controls_Dialogs", "Win32_UI_WindowsAndMessaging"] }